Fix page on mobile device. (#21)
* Fix page on mobile device.

* fix ci.

--- a/src/Map.css
+++ b/src/Map.css
@@ -5,3 +5,7 @@
 .mapboxgl-ctrl-bottom-left {
   z-index: 15;
 }
+
+body {
+  -webkit-overflow-scrolling: touch;
+}
